fix overflow in mobile

--- a/src/index.css
+++ b/src/index.css
@@ -12,7 +12,8 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background: rgb(29,29,29);
-  overflow-x: hidden;
+  max-width: 100%;
+    overflow-x: hidden;
 }
 
 code {
